# openclaw-relay

./: .gitignore  CONTRIBUTORS.md  README.md  relays.json
.github/workflows/: ci.yml  desktop-release.yml
client/: index.html  package-lock.json  package.json
client/js/: app.js  crypto.js  identity-bundle.js  identity-store.js  markdown.js  (+2 more)
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  ai-implementation-guide.md  architecture-audit-review.md  architecture-overview.md  deployment.md  quick-start.md  release-manifest.json  security.md  self-host-relay.md  support-matrix.json  support-matrix.md  technical-design.md  web-client.md
plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
protocol/: README.md  error-codes.json  layer0-channel.md  layer1-security.md  layer2-transport.md  layer3-application.md
relay/: go.mod  go.sum  handler.go  handler_test.go  main.go  relay.go
review/: PROTOCOL.md  README.md  architect-review.md  claude-response.md  next-action.txt  release-gates.md  status.json
scripts/: check-doc-consistency.sh  e2e-relay-client.mjs  peer-chat-soak.py  review-status.py  smoke-openclaw-plugin.sh  validate-protocol-examples.py  web-client-browser-e2e.mjs  web-client-live-e2e.mjs
sdk/python/: pyproject.toml
sdk/python/openclaw_relay/: __init__.py  channel.py  client.py  crypto.py  transport.py  types.py
sdk/python/tests/: test_crypto.py  test_transport.py
(+138 files in other folders)
