[package]
name = "openclaw-relay-desktop"
version = "0.8.0"
description = "Official Windows/macOS desktop shell for OpenClaw Relay"
authors = ["OpenClaw Relay contributors"]
edition = "2021"

[lib]
name = "openclaw_relay_desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
open = "5"
serde_json = "1"
