[project]
name = "openclaw-relay"
version = "0.1.0"
description = "Python SDK for OpenClaw Relay"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
